[gd_scene load_steps=48 format=2]

[ext_resource path="res://test.gd" type="Script" id=1]
[ext_resource path="res://assets/room_bg.png" type="Texture" id=2]
[ext_resource path="res://assets/characterfemale1.png" type="Texture" id=3]
[ext_resource path="res://Figur.gd" type="Script" id=4]
[ext_resource path="res://assets/wardrobe/pants/blue/pantslong1.png" type="Texture" id=5]
[ext_resource path="res://assets/wardrobe/pants/blue/pantslong2.png" type="Texture" id=6]
[ext_resource path="res://assets/wardrobe/pants/blue/pantsshort1.png" type="Texture" id=7]
[ext_resource path="res://assets/wardrobe/pants/blue/pantsshort2.png" type="Texture" id=8]
[ext_resource path="res://assets/wardrobe/tops/blue/top1.png" type="Texture" id=9]
[ext_resource path="res://assets/wardrobe/tops/blue/tshirt1.png" type="Texture" id=10]
[ext_resource path="res://assets/wardrobe/tops/blue/tshirt2.png" type="Texture" id=11]
[ext_resource path="res://assets/wardrobe/tops/blue/pullover1.png" type="Texture" id=12]
[ext_resource path="res://assets/wardrobe/dresses/blue/dress1.png" type="Texture" id=13]
[ext_resource path="res://assets/wardrobe/dresses/blue/dress2.png" type="Texture" id=14]
[ext_resource path="res://assets/wardrobe/dresses/blue/dress3.png" type="Texture" id=15]
[ext_resource path="res://assets/wardrobe/dresses/blue/dress4.png" type="Texture" id=16]
[ext_resource path="res://assets/wardrobe/shoes/blue/shoes1.png" type="Texture" id=17]
[ext_resource path="res://assets/wardrobe/shoes/blue/shoes2.png" type="Texture" id=18]
[ext_resource path="res://assets/wardrobe/shoes/blue/shoes3.png" type="Texture" id=19]
[ext_resource path="res://assets/wardrobe/shoes/blue/shoes4.png" type="Texture" id=20]
[ext_resource path="res://assets/wardrobe/special/amerindian.png" type="Texture" id=21]
[ext_resource path="res://assets/wardrobe/special/fairy.png" type="Texture" id=22]
[ext_resource path="res://assets/wardrobe/special/astronaut.png" type="Texture" id=23]
[ext_resource path="res://assets/wardrobe/special/peterpan.png" type="Texture" id=24]
[ext_resource path="res://assets/wardrobe/special/star.png" type="Texture" id=25]
[ext_resource path="res://assets/wardrobe/special/heart.png" type="Texture" id=26]
[ext_resource path="res://Kleiderschrank.gd" type="Script" id=27]
[ext_resource path="res://assets/bg_schrank.png" type="Texture" id=28]
[ext_resource path="res://assets/wardrobe_open_bg.png" type="Texture" id=29]
[ext_resource path="res://Tops.gd" type="Script" id=30]
[ext_resource path="res://assets/wardrobe/shoes/blue/btn_shoes1.png" type="Texture" id=31]
[ext_resource path="res://assets/wardrobe/shoes/blue/btn_shoes2.png" type="Texture" id=32]
[ext_resource path="res://assets/wardrobe/shoes/blue/btn_shoes3.png" type="Texture" id=33]
[ext_resource path="res://assets/wardrobe/shoes/blue/btn_shoes4.png" type="Texture" id=34]
[ext_resource path="res://assets/btn_home.png" type="Texture" id=35]
[ext_resource path="res://assets/btn_save_look.png" type="Texture" id=36]
[ext_resource path="res://assets/btn_color.png" type="Texture" id=37]
[ext_resource path="res://CategorySelection.gd" type="Script" id=38]
[ext_resource path="res://assets/btn_cat_dresses.png" type="Texture" id=39]
[ext_resource path="res://assets/btn_cat_shoes.png" type="Texture" id=40]
[ext_resource path="res://assets/btn_cat_tops.png" type="Texture" id=41]
[ext_resource path="res://assets/btn_cat_pants.png" type="Texture" id=42]
[ext_resource path="res://assets/btn_cat_special.png" type="Texture" id=43]
[ext_resource path="res://assets/btn_choose_character.png" type="Texture" id=44]
[ext_resource path="res://assets/btn_lookbook.png" type="Texture" id=45]
[ext_resource path="res://CharacterSelection.tscn" type="PackedScene" id=46]

[sub_resource type="Animation" id=1]
resource_name = "Intro"
length = 3.0
tracks/0/type = "bezier"
tracks/0/path = NodePath("Wardrobe/Home:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1050, -0.25, 0, 0.25, 0, 504, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.8, 1.5 )
}

[node name="Main" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [ 35.0, 734.673 ],
"_edit_vertical_guides_": [ 699.0, 0.0, 0.0 ]
}

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 2050.0
margin_bottom = 1536.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="Figur" type="TextureRect" parent="."]
margin_top = 35.0
margin_right = 979.0
margin_bottom = 1430.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )
script = ExtResource( 4 )

[node name="Pants" type="Node2D" parent="Figur"]
editor/display_folded = true
position = Vector2( 37.194, -24.792 )

[node name="PantsLong1" type="TextureRect" parent="Figur/Pants"]
visible = false
margin_left = 288.806
margin_top = 852.792
margin_right = 548.806
margin_bottom = 1282.79
texture = ExtResource( 5 )

[node name="PantsLong2" type="TextureRect" parent="Figur/Pants"]
visible = false
margin_left = 286.806
margin_top = 850.792
margin_right = 547.806
margin_bottom = 1280.79
texture = ExtResource( 6 )

[node name="PantsShort1" type="TextureRect" parent="Figur/Pants"]
visible = false
margin_left = 284.806
margin_top = 846.792
margin_right = 549.806
margin_bottom = 1084.79
texture = ExtResource( 7 )

[node name="PantsShort2" type="TextureRect" parent="Figur/Pants"]
visible = false
margin_left = 284.806
margin_top = 846.792
margin_right = 549.806
margin_bottom = 1084.79
texture = ExtResource( 8 )

[node name="Tops" type="Node2D" parent="Figur"]
editor/display_folded = true

[node name="Top1" type="TextureRect" parent="Figur/Tops"]
visible = false
margin_left = 338.0
margin_top = 522.0
margin_right = 573.0
margin_bottom = 858.0
texture = ExtResource( 9 )

[node name="Tshirt1" type="TextureRect" parent="Figur/Tops"]
visible = false
margin_left = 270.0
margin_top = 522.0
margin_right = 642.0
margin_bottom = 859.0
texture = ExtResource( 10 )

[node name="Tshirt2" type="TextureRect" parent="Figur/Tops"]
visible = false
margin_left = 270.0
margin_top = 522.0
margin_right = 642.0
margin_bottom = 859.0
texture = ExtResource( 11 )

[node name="Pullover1" type="TextureRect" parent="Figur/Tops"]
visible = false
margin_left = 238.0
margin_top = 522.0
margin_right = 673.0
margin_bottom = 869.0
texture = ExtResource( 12 )

[node name="Dresses" type="Node2D" parent="Figur"]
editor/display_folded = true
position = Vector2( -489.5, -697.5 )

[node name="Dress1" type="TextureRect" parent="Figur/Dresses"]
visible = false
margin_left = 813.5
margin_top = 1219.5
margin_right = 1080.5
margin_bottom = 1783.5
texture = ExtResource( 13 )

[node name="Dress2" type="TextureRect" parent="Figur/Dresses"]
visible = false
margin_left = 771.5
margin_top = 1219.5
margin_right = 1129.5
margin_bottom = 1842.5
texture = ExtResource( 14 )

[node name="Dress3" type="TextureRect" parent="Figur/Dresses"]
visible = false
margin_left = 771.493
margin_top = 1219.5
margin_right = 1128.49
margin_bottom = 1752.5
texture = ExtResource( 15 )

[node name="Dress4" type="TextureRect" parent="Figur/Dresses"]
visible = false
margin_left = 757.5
margin_top = 1219.5
margin_right = 1137.5
margin_bottom = 1760.5
texture = ExtResource( 16 )

[node name="Shoes" type="Node2D" parent="Figur"]
editor/display_folded = true
position = Vector2( -489.904, -763.409 )

[node name="Shoes1" type="TextureRect" parent="Figur/Shoes"]
visible = false
margin_left = 723.904
margin_top = 2019.41
margin_right = 1164.9
margin_bottom = 2091.41
texture = ExtResource( 17 )

[node name="Shoes2" type="TextureRect" parent="Figur/Shoes"]
visible = false
margin_left = 731.9
margin_top = 2023.54
margin_right = 1172.9
margin_bottom = 2095.54
texture = ExtResource( 18 )

[node name="Shoes3" type="TextureRect" parent="Figur/Shoes"]
visible = false
margin_left = 725.904
margin_top = 1971.41
margin_right = 1166.9
margin_bottom = 2091.41
texture = ExtResource( 19 )

[node name="Shoes4" type="TextureRect" parent="Figur/Shoes"]
visible = false
margin_left = 731.904
margin_top = 2017.41
margin_right = 1172.9
margin_bottom = 2093.41
texture = ExtResource( 20 )

[node name="Special" type="Node2D" parent="Figur"]
editor/display_folded = true
position = Vector2( -489.904, -763.409 )

[node name="Amerindian" type="TextureRect" parent="Figur/Special"]
visible = false
margin_left = 769.904
margin_top = 811.409
margin_right = 1120.9
margin_bottom = 1917.41
texture = ExtResource( 21 )

[node name="Fairy" type="TextureRect" parent="Figur/Special"]
visible = false
margin_left = 471.904
margin_top = 1057.41
margin_right = 1426.9
margin_bottom = 1827.42
texture = ExtResource( 22 )

[node name="Astronaut" type="TextureRect" parent="Figur/Special"]
visible = false
margin_left = 715.779
margin_top = 881.585
margin_right = 1171.78
margin_bottom = 2097.59
texture = ExtResource( 23 )

[node name="PeterPan" type="TextureRect" parent="Figur/Special"]
visible = false
margin_left = 751.904
margin_top = 1285.41
margin_right = 1138.9
margin_bottom = 2020.41
texture = ExtResource( 24 )

[node name="Star" type="TextureRect" parent="Figur/Special"]
visible = false
margin_left = 1203.9
margin_top = 961.409
margin_right = 1427.9
margin_bottom = 1174.41
texture = ExtResource( 25 )

[node name="Heart" type="TextureRect" parent="Figur/Special"]
visible = false
margin_left = 527.904
margin_top = 1135.41
margin_right = 746.904
margin_bottom = 1318.41
texture = ExtResource( 26 )

[node name="Wardrobe" type="Node2D" parent="."]
script = ExtResource( 27 )

[node name="Background" type="TextureRect" parent="Wardrobe"]
margin_left = 504.0
margin_right = 1545.0
margin_bottom = 1536.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 28 )

[node name="Categories" type="Node2D" parent="Wardrobe"]
position = Vector2( 0, 35 )

[node name="Dresses" type="TextureRect" parent="Wardrobe/Categories"]
editor/display_folded = true
visible = false
margin_left = 530.0
margin_right = 1201.0
margin_bottom = 1405.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 29 )
script = ExtResource( 30 )
isColored = true

[node name="Dress1" type="TextureButton" parent="Wardrobe/Categories/Dresses"]
margin_left = 92.0
margin_top = 96.0
margin_right = 359.0
margin_bottom = 660.0
rect_scale = Vector2( 0.6, 0.6 )
texture_normal = ExtResource( 13 )

[node name="Dress2" type="TextureButton" parent="Wardrobe/Categories/Dresses"]
margin_left = 350.0
margin_top = 72.0
margin_right = 708.0
margin_bottom = 695.0
rect_scale = Vector2( 0.6, 0.6 )
texture_normal = ExtResource( 14 )

[node name="Dress3" type="TextureButton" parent="Wardrobe/Categories/Dresses"]
margin_left = 64.0
margin_top = 510.0
margin_right = 421.0
margin_bottom = 1043.0
rect_scale = Vector2( 0.6, 0.6 )
texture_normal = ExtResource( 15 )

[node name="Dress4" type="TextureButton" parent="Wardrobe/Categories/Dresses"]
margin_left = 364.0
margin_top = 518.0
margin_right = 744.0
margin_bottom = 1059.0
rect_scale = Vector2( 0.6, 0.6 )
texture_normal = ExtResource( 16 )

[node name="Tops" type="TextureRect" parent="Wardrobe/Categories"]
editor/display_folded = true
visible = false
margin_left = 530.0
margin_right = 1201.0
margin_bottom = 1405.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 29 )
script = ExtResource( 30 )
isColored = true

[node name="Top1" type="TextureButton" parent="Wardrobe/Categories/Tops"]
margin_left = 102.0
margin_top = 120.0
margin_right = 337.0
margin_bottom = 456.0
rect_scale = Vector2( 0.6, 0.6 )
texture_normal = ExtResource( 9 )

[node name="Tshirt1" type="TextureButton" parent="Wardrobe/Categories/Tops"]
margin_left = 344.0
margin_top = 124.0
margin_right = 716.0
margin_bottom = 461.0
rect_scale = Vector2( 0.6, 0.6 )
texture_normal = ExtResource( 10 )

[node name="Tshirt2" type="TextureButton" parent="Wardrobe/Categories/Tops"]
margin_left = 68.0
margin_top = 428.0
margin_right = 440.0
margin_bottom = 765.0
rect_scale = Vector2( 0.6, 0.6 )
texture_normal = ExtResource( 11 )

[node name="Pullover1" type="TextureButton" parent="Wardrobe/Categories/Tops"]
margin_left = 344.0
margin_top = 426.0
margin_right = 779.0
margin_bottom = 773.0
rect_scale = Vector2( 0.6, 0.6 )
texture_normal = ExtResource( 12 )

[node name="Pants" type="TextureRect" parent="Wardrobe/Categories"]
editor/display_folded = true
visible = false
margin_left = 530.0
margin_right = 1201.0
margin_bottom = 1405.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 29 )
script = ExtResource( 30 )
isColored = true

[node name="PantsLong1" type="TextureButton" parent="Wardrobe/Categories/Pants"]
margin_left = 104.0
margin_top = 148.0
margin_right = 364.0
margin_bottom = 578.0
rect_scale = Vector2( 0.6, 0.6 )
texture_normal = ExtResource( 5 )

[node name="PantsLong2" type="TextureButton" parent="Wardrobe/Categories/Pants"]
margin_left = 382.0
margin_top = 158.0
margin_right = 643.0
margin_bottom = 588.0
rect_scale = Vector2( 0.6, 0.6 )
texture_normal = ExtResource( 6 )

[node name="PantsShort1" type="TextureButton" parent="Wardrobe/Categories/Pants"]
margin_left = 106.0
margin_top = 510.0
margin_right = 371.0
margin_bottom = 748.0
rect_scale = Vector2( 0.6, 0.6 )
texture_normal = ExtResource( 7 )

[node name="PantsShort2" type="TextureButton" parent="Wardrobe/Categories/Pants"]
margin_left = 378.0
margin_top = 512.0
margin_right = 643.0
margin_bottom = 750.0
rect_scale = Vector2( 0.6, 0.6 )
texture_normal = ExtResource( 8 )

[node name="Shoes" type="TextureRect" parent="Wardrobe/Categories"]
editor/display_folded = true
visible = false
margin_left = 530.0
margin_right = 1201.0
margin_bottom = 1405.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 29 )
script = ExtResource( 30 )
isColored = true
texturePrefix = "btn_"

[node name="Shoes1" type="TextureButton" parent="Wardrobe/Categories/Shoes"]
margin_left = 122.0
margin_top = 154.0
margin_right = 562.0
margin_bottom = 228.0
texture_normal = ExtResource( 31 )

[node name="Shoes2" type="TextureButton" parent="Wardrobe/Categories/Shoes"]
margin_left = 126.0
margin_top = 356.0
margin_right = 549.0
margin_bottom = 428.0
texture_normal = ExtResource( 32 )

[node name="Shoes3" type="TextureButton" parent="Wardrobe/Categories/Shoes"]
margin_left = 124.0
margin_top = 538.0
margin_right = 564.0
margin_bottom = 662.0
texture_normal = ExtResource( 33 )

[node name="Shoes4" type="TextureButton" parent="Wardrobe/Categories/Shoes"]
margin_left = 128.0
margin_top = 792.0
margin_right = 552.0
margin_bottom = 867.0
texture_normal = ExtResource( 34 )

[node name="Special" type="TextureRect" parent="Wardrobe/Categories"]
editor/display_folded = true
visible = false
margin_left = 530.0
margin_right = 1201.0
margin_bottom = 1405.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 29 )
script = ExtResource( 30 )
isColored = false
texturePrefix = ""

[node name="Amerindian" type="TextureButton" parent="Wardrobe/Categories/Special"]
margin_left = 412.0
margin_top = 610.0
margin_right = 763.0
margin_bottom = 1716.0
rect_scale = Vector2( 0.4, 0.4 )
texture_normal = ExtResource( 21 )

[node name="Fairy" type="TextureButton" parent="Wardrobe/Categories/Special"]
margin_left = 258.0
margin_top = 166.0
margin_right = 1213.0
margin_bottom = 936.0
rect_scale = Vector2( 0.4, 0.4 )
texture_normal = ExtResource( 22 )

[node name="Astronaut" type="TextureButton" parent="Wardrobe/Categories/Special"]
margin_left = 80.0
margin_top = 586.0
margin_right = 536.0
margin_bottom = 1802.0
rect_scale = Vector2( 0.4, 0.4 )
texture_normal = ExtResource( 23 )

[node name="PeterPan" type="TextureButton" parent="Wardrobe/Categories/Special"]
margin_left = 54.0
margin_top = 168.0
margin_right = 441.0
margin_bottom = 903.0
rect_scale = Vector2( 0.4, 0.4 )
texture_normal = ExtResource( 24 )

[node name="Star" type="TextureButton" parent="Wardrobe/Categories/Special"]
margin_left = 108.0
margin_top = 1172.0
margin_right = 332.0
margin_bottom = 1385.0
rect_scale = Vector2( 0.6, 0.6 )
texture_normal = ExtResource( 25 )

[node name="Heart" type="TextureButton" parent="Wardrobe/Categories/Special"]
margin_left = 416.0
margin_top = 1190.0
margin_right = 635.0
margin_bottom = 1373.0
rect_scale = Vector2( 0.6, 0.6 )
texture_normal = ExtResource( 26 )

[node name="ContextualButtons" type="Node2D" parent="Wardrobe"]
__meta__ = {
"_edit_lock_": true
}

[node name="ButtonBack" type="TextureButton" parent="Wardrobe/ContextualButtons"]
margin_left = 19.6635
margin_top = 35.1892
margin_right = 183.663
margin_bottom = 196.189
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 35 )

[node name="ButtonSaveToLookbook" type="TextureButton" parent="Wardrobe/ContextualButtons"]
visible = false
margin_left = 19.4292
margin_top = 653.685
margin_right = 183.429
margin_bottom = 814.685
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 36 )

[node name="ButtonColor" type="TextureButton" parent="Wardrobe/ContextualButtons"]
visible = false
margin_left = 894.751
margin_top = 622.693
margin_right = 1123.75
margin_bottom = 846.693
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 37 )

[node name="Home" type="Node2D" parent="Wardrobe"]
position = Vector2( 512, -0.42 )
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 38 )

[node name="ButtonDresses" type="TextureButton" parent="Wardrobe/Home"]
margin_left = 110.0
margin_top = 70.0
margin_right = 463.0
margin_bottom = 416.0
rect_scale = Vector2( 0.95, 0.95 )
texture_normal = ExtResource( 39 )

[node name="ButtonShoes" type="TextureButton" parent="Wardrobe/Home"]
margin_left = 592.0
margin_top = 70.0
margin_right = 945.0
margin_bottom = 416.0
rect_scale = Vector2( 0.95, 0.95 )
texture_normal = ExtResource( 40 )

[node name="ButtonTops" type="TextureButton" parent="Wardrobe/Home"]
margin_left = 110.0
margin_top = 432.0
margin_right = 463.0
margin_bottom = 778.0
rect_scale = Vector2( 0.95, 0.95 )
texture_normal = ExtResource( 41 )

[node name="ButtonPants" type="TextureButton" parent="Wardrobe/Home"]
margin_left = 592.0
margin_top = 432.0
margin_right = 945.0
margin_bottom = 778.0
rect_scale = Vector2( 0.95, 0.95 )
texture_normal = ExtResource( 42 )

[node name="ButtonSpecial" type="TextureButton" parent="Wardrobe/Home"]
margin_left = 350.0
margin_top = 778.0
margin_right = 704.0
margin_bottom = 1124.0
rect_scale = Vector2( 0.95, 0.95 )
texture_normal = ExtResource( 43 )

[node name="ButtonCharacterSelection" type="TextureButton" parent="Wardrobe/Home"]
margin_left = 110.0
margin_top = 1142.0
margin_right = 463.0
margin_bottom = 1488.0
rect_scale = Vector2( 0.95, 0.95 )
texture_normal = ExtResource( 44 )

[node name="ButtonLookbook" type="TextureButton" parent="Wardrobe/Home"]
margin_left = 592.0
margin_top = 1142.0
margin_right = 945.0
margin_bottom = 1488.0
rect_scale = Vector2( 0.95, 0.95 )
texture_normal = ExtResource( 45 )

[node name="Sidebar" type="Node2D" parent="Wardrobe"]
visible = false
position = Vector2( 500, 0 )
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 38 )

[node name="ButtonDresses" type="TextureButton" parent="Wardrobe/Sidebar"]
margin_left = 792.0
margin_top = 68.7431
margin_right = 1145.0
margin_bottom = 414.743
rect_scale = Vector2( 0.64, 0.64 )
texture_normal = ExtResource( 39 )

[node name="ButtonShoes" type="TextureButton" parent="Wardrobe/Sidebar"]
margin_left = 792.0
margin_top = 764.057
margin_right = 1145.0
margin_bottom = 1110.06
rect_scale = Vector2( 0.64, 0.64 )
texture_normal = ExtResource( 40 )

[node name="ButtonTops" type="TextureButton" parent="Wardrobe/Sidebar"]
margin_left = 792.0
margin_top = 300.743
margin_right = 1145.0
margin_bottom = 646.743
rect_scale = Vector2( 0.64, 0.64 )
texture_normal = ExtResource( 41 )

[node name="ButtonPants" type="TextureButton" parent="Wardrobe/Sidebar"]
margin_left = 792.0
margin_top = 532.183
margin_right = 1145.0
margin_bottom = 878.183
rect_scale = Vector2( 0.64, 0.64 )
texture_normal = ExtResource( 42 )

[node name="ButtonSpecial" type="TextureButton" parent="Wardrobe/Sidebar"]
margin_left = 792.0
margin_top = 995.498
margin_right = 1146.0
margin_bottom = 1341.5
rect_scale = Vector2( 0.64, 0.64 )
texture_normal = ExtResource( 43 )

[node name="CharacterSelection" parent="." instance=ExtResource( 46 )]
visible = false

[node name="IntroAnimation" type="AnimationPlayer" parent="."]
autoplay = "Intro"
anims/Intro = SubResource( 1 )
[connection signal="colorSelected" from="Wardrobe/Categories/Dresses" to="Figur" method="_on_item_pressed"]
[connection signal="colorSelected" from="Wardrobe/Categories/Tops" to="Figur" method="_on_item_pressed"]
[connection signal="colorSelected" from="Wardrobe/Categories/Pants" to="Figur" method="_on_item_pressed"]
[connection signal="colorSelected" from="Wardrobe/Categories/Shoes" to="Figur" method="_on_item_pressed"]
[connection signal="colorSelected" from="Wardrobe/Categories/Special" to="Figur" method="_on_item_pressed"]
[connection signal="pressed" from="Wardrobe/ContextualButtons/ButtonBack" to="Wardrobe" method="_on_Button_Back_pressed"]
[connection signal="pressed" from="Wardrobe/ContextualButtons/ButtonSaveToLookbook" to="Wardrobe" method="_on_Button_Back_pressed"]
[connection signal="pressed" from="Wardrobe/ContextualButtons/ButtonColor" to="Wardrobe" method="_on_ButtonColor_pressed"]
[connection signal="categorySelected" from="Wardrobe/Home" to="Wardrobe" method="openWardrobe"]
[connection signal="categorySelected" from="Wardrobe/Sidebar" to="Wardrobe" method="openWardrobe"]
[connection signal="character_selected" from="CharacterSelection" to="." method="_on_CharacterSelection_character_selected"]
